# dev-env

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  fabfile.py  git-repo-fetch.sh  go.mod  go.sum  install-dep-libs.sh  package.json  scp.sh  setup-env.sh  ssh.sh  test.go
ansible/inventory/: aws_ec2.yml
bash_it_theme/: mingzhu.theme.bash
bazel/: deps.bzl
bazel/golang/: deps.bzl  generated_deps_from_go_mod.bzl
bazel/golang/internal/: def.bzl
bazel/nodejs/tools/: app_deps.bzl  bazel_deps.bzl
bazel/python/: defs.bzl  deps.bzl  init.bzl
conf-repo/: install.sh
conf-repo/m2/: install.sh  settings.xml
conf-repo/vim/: vimrc
data/examples/sqs/: lambda-fanout-leaf.json  lambda-fanout.json
demo/bazel_rule/: alerting_rules_test.sh  jinja.bzl  jinja2.bzl
demo/bzlmod/python/: BUILD.bazel  MODULE.bazel  Makefile  README  requirements.in  requirements_lock.txt  requirements_windows.txt
demo/bzlmod/python/other_module/: MODULE.bazel
demo/bzlmod/python3.9/: MODULE.bazel  README
demo/django_demo_1_11/: db.sqlite3  manage.py  manage.sh
demo/django_demo_1_11/brokeback/: __init__.py  celeryapp.py
demo/django_demo_1_11/django_demo_1_11/: settings.py  urls.py  wsgi.py
demo/golang/: BUILD.bazel  errors.go
demo/tools/cards/: side_image_checker.html
docker-env/: build.sh
docker-env/aws/: Dockerfile  build.sh
docker-env/awsbase/: Dockerfile  build.sh
docker-env/awscli/: build.sh
docker-env/build-base/: Dockerfile  build.sh
docker-env/builder/: Dockerfile  build.sh  rbenv-doctor.sh  rbenv-installer.sh  test.sh
docker-env/dev-base/: Dockerfile  build.sh
docker-env/flink/app1/: docker-compose.yaml
docker-env/flink/session-cluster/: docker-compose.yaml
docker-env/localstack/: docker-compose.yaml
docker-env/platform-runtime-base/: Dockerfile  build.sh
docker-env/sshd-alpine/: Dockerfile
docker/awscli/: Dockerfile  build.sh
env-bundle/build-env/: build.sh
env-bundle/usdcny/: fabfile.py
examples/bazel/golang/glog/: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
examples/bazel/golang/glog/bazel/: go_repo.bzl
examples/bazel/golang/glog/glog/: BUILD.bazel  main.go
examples/bazel/python/jupyter/: BUILD.bazel  MODULE.bazel  Makefile  WORKSPACE  requirements_lock.txt
examples/bazel/python/jupyter/jupyter-run/: BUILD.bazel  __main__.py  requirements_lock.txt
examples/bazel/python/jupyter/notebooks/: Math.ipynb  deno-example.ipynb  ipad math.ipynb
fabfile/: __init__.py  fabfile.py
golang/cli/devmono/: main.go
golang/cmd/hello/: BUILD.bazel
golang/cmd/notifpref/: command.go
golang/cmd/sqsfanoutworker/: BUILD.bazel  main.go
golang/cmd/sqsfanoutworker/handler/: BUILD.bazel  aws_util.go  config.go  debug_ctrl.go  handle_sink.go  handle_sink_to_acn.go  handle_sink_to_acn_test.go  handle_split.go  handle_split_test.go  handler.go
golang/cmd/sqsfanoutworker/localsqsfanout/: BUILD.bazel  main.go
golang/learning/: BUILD.bazel  main.go
golang/models/notifpref/: notification_preference_model.go
golang/pkg/dynamodemo/: BUILD.bazel  run.go  with_event.go
golang/solitaire_solver/: BUILD.bazel  base_board_test.go  board.go  board_input.go  board_pile_op.go  board_pile_op_test.go  board_stack_op.go  board_stock_op.go  board_waste_op.go  board_waste_op_test.go  driver.go  model.go  run.sh  test.sh  txt  util.go
golang/solitaire_solver/main/: BUILD.bazel  main.go
golang/util/awsutil/: aws_util.go  ddb_util.go
js/demo_bazel/: BUILD.bazel  README.md  index.html  package.json  tsconfig.json  webpack.config.js
js/games/demo-babylon-2/: .gitignore  babel.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.common.js  webpack.config.dev.js  webpack.config.prod.js
k8s/conjure-up/: README.md
k8s/demo/: build-docker.sh  create_mysql_secret.sh  deploy-demo-server.yaml  deploy-mysql-default.yaml  pv.yaml
k8s/demo/docker/: Dockerfile
k8s/tf-kops/: README.md  _apply.sh  _include.tf  _init.sh  _plan.sh  _variables.tf  route53.tf  s3.tf
lib-shell/: ansible.sh  aws.sh  bazel.sh  ccache.sh  docker.sh  example.sh  fbthrift.sh  git.sh  golang.sh  homebrew.sh  k8s.sh  lib.sh  localstack.sh  macports.sh  python.sh  ssh.sh  thrift.sh
my-dev-env/: config.py  fabfile.py
python/demo_bazel/: BUILD.bazel  main.py  requirements_lock.txt
python/demo_bazel/django_hello_world/: BUILD.bazel  README.txt
python/demo_bazel/django_hello_world/django_project/: BUILD.bazel
python/demo_bazel/django_hello_world/pages/: BUILD.bazel
python/jupyter/: .gitignore  MODULE.bazel  requirements.in  requirements_lock.txt
python/jupyter-notebook/: BUILD.bazel  Makefile  README.md  requirements.in
python/jupyter-notebook/jupyter-run/: BUILD.bazel
python/jupyter-notebook/notebooks/: Math.ipynb  calendar.ipynb  ipad math.ipynb
python/jupyter/bzlmod/: BUILD.bazel  MODULE.bazel  __init__.py  __main__.py  requirements_lock.txt
python/lc/1/: BUILD.bazel  solution.py  solution_test.py
scripts/demo/: ddb_get.sh  ddb_get_event.sh  ddb_query.sh
services/tunnel/: alert_util.py  main.py  receive.py
snippet/: init_pod.sh
software-install/: Readme.txt
software-install/docker-openvpn-server/: README.md  gen-openvpn-client-cert.sh  install-openvpn-docker.sh  start-openvpn-docker.sh
software-install/govendor/: init.sh
software-install/grafana/: install.sh
software-install/influxdb/: install.sh
software-install/lib-shell/: default.sh  init.sh
software-install/libs/: _common.sh  _env.sh  golang.sh  pyenv.sh  rbenv.sh
software-install/neo4j/: install.sh
software-install/php-composer/: init.sh
software-install/php7/: install.sh
software-install/sdkman/: install.sh
software-install/thrift/: install.sh
software-install/vim/: init.sh  vimrc
terraform/: s3.tf
terraform/bootstrap/: main.tf  terraform.tfstate
terraform/main/: main.tf  terraform.tf
vagrant/: Vagrantfile.template
vagrant/private-ubuntu/: Vagrantfile
vagrant/ubuntu18/: Vagrantfile
vagrant/ubuntu20/: Vagrantfile
vagrant/win10/: Vagrantfile
vagrant/win8.1/: Vagrantfile
vagrant/workspace-ubuntu18/: Vagrantfile
(+30 files in other folders)
