## Buildifier

# Dependencies:
# - Golang rules
# - Gazelle rules
# - Protobuf rules
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/redisliu/dev-env
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=bazel/golang/generated_deps_from_go_mod.bzl%fetch_go_mod_deps",
        "-prune",
    ],
    command = "update-repos",
)
