load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "golang_lib",
    srcs = ["errors.go"],
    importpath = "github.com/redisliu/dev-env/demo/golang",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "golang",
    embed = [":golang_lib"],
    visibility = ["//visibility:public"],
)
