load("@npm_demo_bazel//@bazel/typescript:index.bzl", "ts_project")
load("@npm_demo_bazel//http-server:index.bzl", "http_server")
load("@npm_demo_bazel//sass:index.bzl", "sass")
load("@npm_demo_bazel//webpack-cli:index.bzl", webpack = "webpack_cli")

sass(
    name = "styles",
    outs = ["styles.css"],
    args = [
        "$(execpath styles.scss)",
        "$(execpath styles.css)",
    ],
    data = ["styles.scss"],
)

ts_project(
    # Experimental: Start a tsc daemon to watch for changes to make recompiles faster.
    # supports_workers = True,
    # declaration = True,
    deps = [
        "@npm_demo_bazel//@types",
        "@npm_demo_bazel//csstype",
    ],
    typescript_package = "@npm_demo_bazel//typescript"
)

webpack(
    name = "bundle",
    outs = ["bundle.js"],
    args = [
        "$(execpath src/index.js)",
        "--config",
        "$(execpath webpack.config.js)",
        "-o",
        "$@",
    ],
    data = [
        "src/index.js",
        "src/styles/index.css",
        "webpack.config.js",
        "webpack.config.common.js",
        "@npm_demo_bazel//:node_modules",
    ],
)

# Note, on Windows you need `--enable_runfiles`
http_server(
    name = "server",
    data = [
        "bundle.js",
        "index.html",
    ],
    templated_args = ["."],
)
