module(
    name = "example_bzlmod",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "0.25.0")

_PYTHON_VERSION = "3.11"
_PYTHON_REPO = "python_3_11"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = _PYTHON_VERSION,
    is_default = True,
)
use_repo(python, _PYTHON_REPO)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = _PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
    requirements_windows = "//:requirements_windows.txt",
)
use_repo(pip, "pip")

bazel_dep(name = "other_module", version = "", repo_name = "our_other_module")
local_path_override(
    module_name = "other_module",
    path = "other_module",
)
