module(
    name = "example_bzlmod",
    version = "0.0.0",
    compatibility_level = 1,
)

############## Top level bzlmod for Python
bazel_dep(name = "rules_python", version = "0.19.0")

######### Python module detailed configs.

#### Register toolchain
# Supported version: https://github.com/bazelbuild/rules_python/blob/main/python/versions.bzl
python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    name = "python3_9",
    configure_coverage_tool = True,
    python_version = "3.9",
)
use_repo(python, "python3_9_toolchains")

register_toolchains(
    "@python3_9_toolchains//:all",
)

#### Register pip
pip = use_extension("@rules_python//python:extensions.bzl", "pip")
pip.parse(
    name = "pip",
    requirements_lock = "//:requirements_lock.txt",
    requirements_windows = "//:requirements_windows.txt",
)
use_repo(pip, "pip")

