load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sqsfanoutworker_lib",
    srcs = ["main.go"],
    importpath = "github.com/redisliu/dev-env/golang/cmd/sqsfanoutworker",
    visibility = ["//visibility:private"],
    deps = [
        "//golang/cmd/sqsfanoutworker/handler",
        "@com_github_aws_aws_lambda_go//lambda",
    ],
)

go_binary(
    name = "sqsfanoutworker",
    embed = [":sqsfanoutworker_lib"],
    visibility = ["//visibility:public"],
)
