load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dynamodemo",
    srcs = [
        "run.go",
        "with_event.go",
    ],
    importpath = "github.com/redisliu/dev-env/golang/pkg/dynamodemo",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/awserr",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/dynamodb",
    ],
)
