load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "main_lib",
    srcs = ["main.go"],
    importpath = "github.com/redisliu/dev-env/golang/solitaire_solver/main",
    visibility = ["//visibility:private"],
    deps = ["//golang/solitaire_solver"],
)

go_binary(
    name = "main",
    embed = [":main_lib"],
    visibility = ["//visibility:public"],
)
