load("@django_hello_world_pip_deps//:requirements.bzl", "requirement")

py_binary(
    name = "manage",
    srcs = [
        "manage.py",
    ],
    deps = [
        requirement("Django"),
        "//python/demo_bazel/django_hello_world/django_project",
        "//python/demo_bazel/django_hello_world/pages",
    ],
)
