load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@pip//:requirements.bzl", "requirement")

# gazelle:ignore notebook.notebookapp.main

py_library(
    name = "jupyter-run-lib",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
    deps = [requirement("notebook")],
)

py_binary(
    name = "jupyter",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        requirement("notebook"),
        requirement("numpy"),
    ],
)
