module(
    name = "jupyter",
    compatibility_level = 1,
    version = "0.0.0",
)

# TODO: migrate to registry module when ready.
bazel_dep(name = "rules_python", version = "0.0.0")
git_override(
    module_name = "rules_python",
    remote = "git@github.com:bazelbuild/rules_python.git",
    commit = "00545742ad2450863aeb82353d4275a1e5ed3f24",
)

python = use_extension("@rules_python//python:extensions.bzl", "python")

python.toolchain(
    name = "python3_10",
    python_version = "3.10",
)

use_repo(python, "python3_10_toolchains")

register_toolchains(
    "@python3_10_toolchains//:all",
)

pip = use_extension("@rules_python//python:extensions.bzl", "pip")

pip.parse(
    name = "pip",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pip")
