load("@django_hello_world_pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "django_project",
    srcs = [
        "__init__.py",
        "asgi.py",
        "settings.py",
        "urls.py",
        "wsgi.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("Django"),
    ],
)
