load("@django_hello_world_pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "pages",
    srcs = [
        "__init__.py",
        "admin.py",
        "apps.py",
        "models.py",
        "tests.py",
        "urls.py",
        "views.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("Django"),
    ],
)
